[gd_scene load_steps=18 format=3 uid="uid://convv7s27oigp"]

[ext_resource type="Script" path="res://game/game.gd" id="1_x0r5m"]
[ext_resource type="AudioStream" uid="uid://b8w0pe41fpwrg" path="res://game/narration/Line 1.ogg" id="2_ybxpp"]
[ext_resource type="AudioStream" uid="uid://w7vvmv21p1tq" path="res://game/narration/Line 2.ogg" id="3_4l85n"]
[ext_resource type="AudioStream" uid="uid://ded2883uobslq" path="res://game/narration/Line 3.ogg" id="4_oxatg"]
[ext_resource type="AudioStream" uid="uid://dvuttta8i7uou" path="res://game/narration/Line 4.ogg" id="5_jfv2a"]
[ext_resource type="AudioStream" uid="uid://cranqp14runce" path="res://game/narration/Line 5.ogg" id="6_3syr7"]
[ext_resource type="AudioStream" uid="uid://b10xp87qdd3e3" path="res://game/narration/Line 6.ogg" id="7_dcsvk"]
[ext_resource type="AudioStream" uid="uid://cvhpjqre8o85u" path="res://game/narration/Line 7.ogg" id="8_gv5c1"]
[ext_resource type="AudioStream" uid="uid://c0vdqty745ldh" path="res://game/narration/Line 8.ogg" id="9_15qhg"]
[ext_resource type="AudioStream" uid="uid://d12owo6knn3ci" path="res://game/narration/Line 9.ogg" id="10_y3msi"]
[ext_resource type="AudioStream" uid="uid://bndketiyr0q6o" path="res://game/narration/Line 10.ogg" id="11_r1asp"]

[sub_resource type="Gradient" id="Gradient_4xkow"]
offsets = PackedFloat32Array(0, 0.123377, 0.168831, 0.532468, 0.603896, 0.766234, 1)
colors = PackedColorArray(0.815833, 0.89, 0.445, 1, 0.794026, 0.850442, 0.421403, 1, 0.317591, 0.813099, 0.79641, 1, 0.278248, 0.760463, 0.677691, 1, 0.128254, 0.559789, 0.225072, 1, 0.0536667, 0.46, 0, 1, 0.48, 0.2808, 0.0816, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pqrp6"]
gradient = SubResource("Gradient_4xkow")
fill_from = Vector2(0.550459, 0.0412844)
fill_to = Vector2(0.954128, 0.96789)

[sub_resource type="Gradient" id="Gradient_f1yr2"]
offsets = PackedFloat32Array(0, 0.538961, 0.597403, 0.824675, 0.87013, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.0132029, 0.0767609, 0.00614087, 1, 0.0172, 0.1, 0.008, 1, 0.03268, 0.19, 0.0152, 1, 0.167106, 0.174603, 0.0850423, 1, 0.18, 0.16677, 0.0918, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7yx88"]
gradient = SubResource("Gradient_f1yr2")
fill_from = Vector2(0.155963, 0)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_dqhyj"]
offsets = PackedFloat32Array(0, 0.88961, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.435065, 0.435065, 0.435065, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fvt4b"]
gradient = SubResource("Gradient_dqhyj")
fill_to = Vector2(0.931193, 1)

[node name="Game" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_x0r5m")

[node name="DayBackground" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = SubResource("GradientTexture2D_pqrp6")

[node name="Container" type="CenterContainer" parent="DayBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnnounceDead" type="Label" parent="DayBackground/Container"]
visible = false
layout_mode = 2

[node name="PlayersGrid" type="GridContainer" parent="DayBackground/Container"]
visible = false
layout_mode = 2
columns = 6

[node name="Label" type="Label" parent="DayBackground/Container/PlayersGrid"]
layout_mode = 2
text = "test"

[node name="VoteOver" type="Label" parent="DayBackground/Container"]
visible = false
layout_mode = 2
text = "Voting time is over"

[node name="NightBackground" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("GradientTexture2D_7yx88")

[node name="Container" type="CenterContainer" parent="NightBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoToSleep" type="Label" parent="NightBackground/Container"]
visible = false
layout_mode = 2
text = "Sleep now"

[node name="BothKillersWakeUp" type="Label" parent="NightBackground/Container"]
visible = false
layout_mode = 2
text = "Both werewolves wake up"

[node name="Cultist1Votes" type="Label" parent="NightBackground/Container"]
visible = false
layout_mode = 2
text = "Cultist 1 votes"

[node name="Cultist2Votes" type="Label" parent="NightBackground/Container"]
visible = false
layout_mode = 2
text = "Cultist 2 votes"

[node name="ShamanSaves" type="Label" parent="NightBackground/Container"]
visible = false
layout_mode = 2
text = "Shaman choses someone to save"

[node name="SeerChecks" type="Label" parent="NightBackground/Container"]
visible = false
layout_mode = 2
text = "Seer checks whether someone is a cultist or not"

[node name="GameEndBackg" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = SubResource("GradientTexture2D_fvt4b")

[node name="Container" type="CenterContainer" parent="GameEndBackg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnnounceWinners" type="Label" parent="GameEndBackg/Container"]
layout_mode = 2
text = "the winner is:"

[node name="Timers" type="Control" parent="."]
layout_mode = 2

[node name="StepTimer" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Narration" type="Control" parent="."]
layout_mode = 2

[node name="GoToSleep" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("2_ybxpp")

[node name="KillersSeeEachother" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("3_4l85n")

[node name="GoBackToSleep" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("4_oxatg")

[node name="Cultist1" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("5_jfv2a")

[node name="Cultist2" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("6_3syr7")

[node name="MorningComes" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("7_dcsvk")

[node name="VotingStarts" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("8_gv5c1")

[node name="NightComes" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("9_15qhg")

[node name="Shaman" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("10_y3msi")

[node name="Seer" type="AudioStreamPlayer" parent="Narration"]
stream = ExtResource("11_r1asp")

[node name="SkipButton" type="Button" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Next step ->"

[connection signal="timeout" from="Timers/StepTimer" to="." method="_changeScreen"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
